fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Walkin_Interventional__c.field-meta.xml
<CustomField>
    <fullName>Walkin_Interventional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Walkin Interventional</label>
    <type>Checkbox</type>
</CustomField>