fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/What_Department_are_you_affiliated_with__c.field-meta.xml
<CustomField>
    <fullName>What_Department_are_you_affiliated_with__c</fullName>
    <label>What Department are you affiliated with?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>