fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/What_is_your_department__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_department__c</fullName>
    <label>What is your department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interventional Radiology</fullName>
            </value>
            <value>
                <fullName>Emergency Department</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Infusion Team/Vascular Access</fullName>
            </value>
            <value>
                <fullName>Pre-hospital</fullName>
            </value>
            <value>
                <fullName>Obsterics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Hematology/Oncology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>