fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/What_is_your_level_of_responsibility__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_level_of_responsibility__c</fullName>
    <label>What is your level of responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Paramedic</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Clinical Educator</fullName>
            </value>
            <value>
                <fullName>NP/PA</fullName>
            </value>
            <value>
                <fullName>Manager/Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>