fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/WHY_WOULD_YOU_LIKE_TO_ATTEND_THIS_COURSE__c.field-meta.xml
<CustomField>
    <fullName>WHY_WOULD_YOU_LIKE_TO_ATTEND_THIS_COURSE__c</fullName>
    <label>WHY WOULD YOU LIKE TO ATTEND THIS COURSE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>