fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Zip_Code_Auto_Route__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Auto_Route__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zip Code Auto Route</label>
    <type>Checkbox</type>
</CustomField>