fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Zip_Code_Territories__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Territories__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Code Territories</label>
    <referenceTo>Zip_Code_Territories__c</referenceTo>
    <relationshipLabel>Lab Participants</relationshipLabel>
    <relationshipName>Lab_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>