fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Zip_Code_Territory_User__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Territory_User__c</fullName>
    <formula>if(Zip_Code_Business_Unit__c = &quot;Vascular&quot;, Zip_Code_Territories__r.Vascular__c,
if(Zip_Code_Business_Unit__c = &quot;EMS&quot;, Zip_Code_Territories__r.EMS__c,
if(Zip_Code_Business_Unit__c = &quot;IA&quot;, Zip_Code_Territories__r.IA__c,
if(Zip_Code_Business_Unit__c = &quot;Anesthesia&quot;, Zip_Code_Territories__r.Anesthesia__c,
&quot;&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Code Territory User</label>
    <type>Text</type>
</CustomField>