fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/recordTypes/Lab.recordType-meta.xml
<RecordType>
    <fullName>Lab</fullName>
    <active>true</active>
    <label>Lab</label>
</RecordType>