fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Lab_Time__c</columns>
    <columns>Lab_Time_2__c</columns>
    <columns>Lab_Participant_Number__c</columns>
    <columns>Lab__c</columns>
    <columns>Status__c</columns>
    <columns>Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lab_Participant__c.Lab</value>
    </filters>
    <label>Created Today</label>
</ListView>