fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/listViews/Goldberg.listView-meta.xml
<ListView>
    <fullName>Goldberg</fullName>
    <columns>NAME</columns>
    <columns>Lab__c</columns>
    <columns>Lab_Participant_Number__c</columns>
    <columns>Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approver__c</field>
        <operation>equals</operation>
        <value>Jeffrey Goldberg</value>
    </filters>
    <label>Goldberg</label>
    <language>en_US</language>
</ListView>