fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/listViews/Lab_Participants_Edit.listView-meta.xml
<ListView>
    <fullName>Lab_Participants_Edit</fullName>
    <columns>NAME</columns>
    <columns>Lab_Time__c</columns>
    <columns>Lab_Time_2__c</columns>
    <columns>Lab_Participant_Number__c</columns>
    <columns>Lab__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lab__c</field>
        <operation>startsWith</operation>
        <value>Wellstar Kennestone</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lab_Participant__c.Lab</value>
    </filters>
    <label>Lab Participants Edit</label>
</ListView>